<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_symbols_emoji_type_item"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:layout_alignParentBottom="true"
    android:gravity="center_vertical"
    android:orientation="horizontal">
    <ImageView
        android:contentDescription="@string/text_edit_return"
        android:id="@+id/iv_symbols_emoji_type_return"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:layout_gravity="center_vertical"
        android:scaleType="centerInside"
        android:padding="12dp"
        android:src="@drawable/ic_arrow_back_24"/>
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_symbols_emoji_type"
        android:theme="@style/Theme.AppTheme"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        app:tabMinWidth="48dp"
        android:background="@android:color/transparent"
        app:tabBackground="@android:color/transparent"
        app:tabRippleColor="@android:color/transparent"
        app:tabGravity="start"
        app:tabIndicator="@null"
        app:tabMode="scrollable"/>
    <ImageView
        android:id="@+id/iv_symbols_emoji_type_lock"
        android:contentDescription="@string/symbol_lock"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_gravity="center_vertical"
        android:scaleType="centerInside"
        android:padding="12dp"
        android:src="@drawable/icon_symbol_lock"
        android:visibility="gone"/>
    <ImageView
        android:id="@+id/iv_symbols_emoji_type_delete"
        android:contentDescription="@string/accessibility_key_delete"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:layout_gravity="center_vertical"
        android:scaleType="centerInside"
        android:padding="12dp"
        android:src="@drawable/skb_key_delete_icon"/>
</LinearLayout>
